--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,14 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
+
+    //compile 'com.google.android.gms:play-services:9.6.1'
 
     compile 'com.android.support:multidex:1.0.0'
+
+    compile 'com.netflix.feign:feign-gson:8.16.2'
+    compile 'com.netflix.feign:feign-core:8.16.2'
 
     testCompile 'junit:junit:4.12'
 }
