--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // https://mvnrepository.com/artifact/org.greenrobot/eventbus
-    compile group: 'org.greenrobot', name: 'eventbus', version: '3.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
     compile 'com.google.android.gms:play-services-location:9.6.1'
-
     //compile 'com.google.android.gms:play-services:9.6.1'
-
     compile 'com.android.support:multidex:1.0.0'
-
-    compile 'com.netflix.feign:feign-gson:8.16.2'
-    compile 'com.netflix.feign:feign-core:8.16.2'
-
+//    compile 'com.netflix.feign:feign-gson:8.16.2'
+//    compile 'com.netflix.feign:feign-core:8.16.2'
     testCompile 'junit:junit:4.12'
+    compile 'io.github.openfeign:feign-core:9.3.1'
+    compile 'io.github.openfeign:feign-gson:9.3.1'
 }
