--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity
             android:name=".Activity.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Activity.PerfilActivity"></activity>
+        <activity android:name=".Activity.PerfilActivity" />
+        <activity android:name=".OpcoesActivity"></activity>
     </application>
 
 </manifest>
