--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:name=".Activity.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".Activity.PerfilActivity" />
-        <activity android:name=".OpcoesActivity"></activity>
+        <activity android:name=".Activity.OpcoesActivity"></activity>
     </application>
 
 </manifest>
